force-app/main/default/objects/Case/fields/Account_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Account_Distributor__c</fullName>
    <formula>Account.Distributor__c</formula>
    <label>Account Distributor</label>
    <type>Text</type>
</CustomField>