force-app/main/default/objects/Case/fields/Account_Name_Copy__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Copy__c</fullName>
    <description>Added to make Account Field available for Report Type Case History</description>
    <formula>Account.Name</formula>
    <inlineHelpText>Added to make Account Field available for Report Type Case History</inlineHelpText>
    <label>Account Name Copy</label>
    <type>Text</type>
</CustomField>