force-app/main/default/objects/Case/fields/Account_Priority__c.field-meta.xml
<CustomField>
    <fullName>Account_Priority__c</fullName>
    <formula>TEXT(Account.Priority__c)</formula>
    <label>Account Priority</label>
    <type>Text</type>
</CustomField>