force-app/main/default/objects/Case/fields/Account_Priority_Flag__c.field-meta.xml
<CustomField>
    <fullName>Account_Priority_Flag__c</fullName>
    <description>Red: A
Yellow: B
None: others</description>
    <formula>IMAGE( 
CASE(Account.Priority__c, 
&quot;A&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;B&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;/s.gif&quot;), 
&quot;Account Priority Flag&quot;)</formula>
    <inlineHelpText>Red: A
Yellow: B
None: others</inlineHelpText>
    <label>Account Priority Flag</label>
    <type>Text</type>
</CustomField>