force-app/main/default/objects/Case/fields/Account_uB_Office__c.field-meta.xml
<CustomField>
    <fullName>Account_uB_Office__c</fullName>
    <formula>text( Account.uB_Office__c)</formula>
    <inlineHelpText>uB Office of Account. Automatically copied from linked Account.</inlineHelpText>
    <label>Account uB Office</label>
    <type>Text</type>
</CustomField>