force-app/main/default/objects/Case/fields/AE_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>AE_Satisfaction__c</fullName>
    <inlineHelpText>Editable only for AE</inlineHelpText>
    <label>AE Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Improvement Needed</fullName>
            </value>
            <value>
                <fullName>Improvement Possible</fullName>
            </value>
            <value>
                <fullName>Average - OK</fullName>
            </value>
            <value>
                <fullName>Above Normal Level</fullName>
            </value>
            <value>
                <fullName>Very Good Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>