force-app/main/default/objects/Case/fields/Bug_Reference__c.field-meta.xml
<CustomField>
    <fullName>Bug_Reference__c</fullName>
    <description>Enter a link here to the internal bug tracking system. The link may not be accessible from outside R&amp;D.</description>
    <inlineHelpText>Identifier in the internal bug tracking system, filled by AE.</inlineHelpText>
    <label>Internal Ticket Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>