force-app/main/default/objects/Case/fields/Bug_Reference_Filled__c.field-meta.xml
<CustomField>
    <fullName>Bug_Reference_Filled__c</fullName>
    <description>Ticked when anything is in Bug Reference field (i.e. the Case has been escalated to R&amp;D), added to make statistics reports for AEs.</description>
    <formula>IF(ISBLANK(Bug_Reference__c),FALSE,TRUE)</formula>
    <inlineHelpText>Ticked when anything is in Bug Reference field (i.e. the Case has been escalated to R&amp;D), added to make statistics reports for AEs.</inlineHelpText>
    <label>Bug Reference Filled</label>
    <type>Checkbox</type>
</CustomField>