force-app/main/default/objects/Case/fields/Case_Comment__c.field-meta.xml
<CustomField>
    <fullName>Case_Comment__c</fullName>
    <description>Added for email alert on the latest Case Comment</description>
    <inlineHelpText>Added for email alert on the latest Case Comment</inlineHelpText>
    <label>Case Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>