force-app/main/default/objects/Case/fields/Case_Initiator__c.field-meta.xml
<CustomField>
    <fullName>Case_Initiator__c</fullName>
    <formula>IF(LEN( Case_Initiator_Source__c) =0, CreatedBy.Alias,  Case_Initiator_Source__r.Alias )

/* Original version with first and last name */
/* IF(LEN( Case_Initiator_Source__c) =0, CreatedBy.FirstName &amp;&quot; &quot;&amp;  CreatedBy.LastName ,  Case_Initiator_Source__r.FirstName &amp;&quot; &quot;&amp; Case_Initiator_Source__r.LastName )  */</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>When case initiator is different than the person who created the case, use the field &quot;Case Initiator Source&quot; to change.</inlineHelpText>
    <label>Case Initiator</label>
    <type>Text</type>
</CustomField>