force-app/main/default/objects/Case/fields/Case_Initiator_Source__c.field-meta.xml
<CustomField>
    <fullName>Case_Initiator_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this field if the case is opened for someone else (Case Initiator &lt;&gt; Created by)</inlineHelpText>
    <label>Case Initiator Source</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases_initiated</relationshipName>
    <type>Lookup</type>
</CustomField>