force-app/main/default/objects/Case/fields/Case_Owner_Profile__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Profile__c</fullName>
    <description>Case owner profile when case is closed.</description>
    <label>Case Owner Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>