force-app/main/default/objects/Case/fields/Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type__c</fullName>
    <label>Case Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email Case</fullName>
            </value>
            <value>
                <fullName>Support Case</fullName>
            </value>
            <value>
                <fullName>Legal Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>