force-app/main/default/objects/Case/fields/Case_Returned__c.field-meta.xml
<CustomField>
    <fullName>Case_Returned__c</fullName>
    <label>Case Returned</label>
    <type>DateTime</type>
</CustomField>