force-app/main/default/objects/Case/fields/Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>Channel_Manager__c</fullName>
    <description>Used in the &quot;NEW RMA&quot; Button</description>
    <formula>Account.Channel_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Manager</label>
    <type>Text</type>
</CustomField>