force-app/main/default/objects/Case/fields/Condition_of_Samples__c.field-meta.xml
<CustomField>
    <fullName>Condition_of_Samples__c</fullName>
    <label>Condition of Samples</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RMA_Condition_of_Samples</valueSetName>
    </valueSet>
</CustomField>