force-app/main/default/objects/Case/fields/Created_By_Partner__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be updated through workflow</description>
    <inlineHelpText>Checked if the Case is created by our partner users (distributors), updated through workflow.</inlineHelpText>
    <label>Created By Partner</label>
    <type>Checkbox</type>
</CustomField>