force-app/main/default/objects/Case/fields/Current_Active_Region__c.field-meta.xml
<CustomField>
    <fullName>Current_Active_Region__c</fullName>
    <description>In GMT
07:00-15:00 EMEA
15:00-23:00 Americas
23:00-07:00 APAC</description>
    <formula>IF((HOUR(TIMENOW())&gt;=7 &amp;&amp; HOUR(TIMENOW())&lt;15),&quot;EMEA&quot;,IF((HOUR(TIMENOW())&gt;=15 &amp;&amp; HOUR(TIMENOW())&lt;23),&quot;Americas&quot;,&quot;APAC&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>In GMT
07:00-15:00 EMEA
15:00-23:00 Americas
23:00-07:00 APAC</inlineHelpText>
    <label>Current Active Region</label>
    <type>Text</type>
</CustomField>