force-app/main/default/objects/Case/fields/Customer_PO_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_No__c</fullName>
    <description>Number/Reference of the Customer PO</description>
    <inlineHelpText>Number/Reference of the Customer PO</inlineHelpText>
    <label>Customer PO No</label>
    <length>40</length>
    <type>Text</type>
</CustomField>