force-app/main/default/objects/Case/fields/Customer_Request__c.field-meta.xml
<CustomField>
    <fullName>Customer_Request__c</fullName>
    <label>Customer Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RMA_Customer_Request</valueSetName>
    </valueSet>
</CustomField>