force-app/main/default/objects/Case/fields/Date_Escalated_by_AE_APAC__c.field-meta.xml
<CustomField>
    <fullName>Date_Escalated_by_AE_APAC__c</fullName>
    <label>Date Escalated by AE APAC</label>
    <type>DateTime</type>
</CustomField>