force-app/main/default/objects/Case/fields/Date_Escalated_by_FAE__c.field-meta.xml
<CustomField>
    <fullName>Date_Escalated_by_FAE__c</fullName>
    <label>Date Escalated by FAE</label>
    <type>DateTime</type>
</CustomField>