force-app/main/default/objects/Case/fields/Date_Escalated_by_FAE_Leader__c.field-meta.xml
<CustomField>
    <fullName>Date_Escalated_by_FAE_Leader__c</fullName>
    <label>Date Escalated by FAE Leader</label>
    <type>DateTime</type>
</CustomField>