force-app/main/default/objects/Case/fields/Date_Escalated_by_TM__c.field-meta.xml
<CustomField>
    <fullName>Date_Escalated_by_TM__c</fullName>
    <label>Date Escalated by TM</label>
    <type>DateTime</type>
</CustomField>