force-app/main/default/objects/Case/fields/Date_Escalated_To_AE_Cel__c.field-meta.xml
<CustomField>
    <fullName>Date_Escalated_To_AE_Cel__c</fullName>
    <inlineHelpText>Date Escalated To AE Cel for the first time</inlineHelpText>
    <label>Date Escalated To AE Cel</label>
    <type>DateTime</type>
</CustomField>