force-app/main/default/objects/Case/fields/Date_Escalated_To_AE_Pos__c.field-meta.xml
<CustomField>
    <fullName>Date_Escalated_To_AE_Pos__c</fullName>
    <inlineHelpText>Escalated To AE Pos for the first time</inlineHelpText>
    <label>Date Escalated To AE Pos</label>
    <type>DateTime</type>
</CustomField>