force-app/main/default/objects/Case/fields/Date_Escalated_To_AE_Sho__c.field-meta.xml
<CustomField>
    <fullName>Date_Escalated_To_AE_Sho__c</fullName>
    <inlineHelpText>Date Escalated To AE Sho for the first time</inlineHelpText>
    <label>Date Escalated To AE Sho</label>
    <type>DateTime</type>
</CustomField>