force-app/main/default/objects/Case/fields/Date_Escalated_To_Q__c.field-meta.xml
<CustomField>
    <fullName>Date_Escalated_To_Q__c</fullName>
    <inlineHelpText>Date Escalated To Q for the first time</inlineHelpText>
    <label>Date Escalated To Q</label>
    <type>DateTime</type>
</CustomField>