force-app/main/default/objects/Case/fields/Date_Escalated_To_TM__c.field-meta.xml
<CustomField>
    <fullName>Date_Escalated_To_TM__c</fullName>
    <inlineHelpText>Date Escalated To TM for the first time</inlineHelpText>
    <label>Date Escalated To TM</label>
    <type>DateTime</type>
</CustomField>