force-app/main/default/objects/Case/fields/Days_Old__c.field-meta.xml
<CustomField>
    <fullName>Days_Old__c</fullName>
    <formula>IF (IsClosed,ClosedDate - CreatedDate,NOW() - CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Old</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>