force-app/main/default/objects/Case/fields/Detailed_Description__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Description__c</fullName>
    <description>This field is created for the Portal User&apos;s Case Layout on the portal.</description>
    <inlineHelpText>Description written in u-blox Portal</inlineHelpText>
    <label>Detailed Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>