force-app/main/default/objects/Case/fields/Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name__c</fullName>
    <inlineHelpText>Distributor name of Account owner. Used to grant access for portal users</inlineHelpText>
    <label>Distributor Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>