force-app/main/default/objects/Case/fields/Effort_Spent__c.field-meta.xml
<CustomField>
    <fullName>Effort_Spent__c</fullName>
    <inlineHelpText>Editable only for AE (Unit: hour)</inlineHelpText>
    <label>Effort Spent AE</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>