force-app/main/default/objects/Case/fields/Effort_Spent_FAE__c.field-meta.xml
<CustomField>
    <fullName>Effort_Spent_FAE__c</fullName>
    <inlineHelpText>Editable only for FAE (Unit: hour)</inlineHelpText>
    <label>Effort Spent FAE</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>