force-app/main/default/objects/Case/fields/Email_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Email_Account_Owner__c</fullName>
    <description>Used for workflows.</description>
    <inlineHelpText>Email address of the account owner related to this Case.</inlineHelpText>
    <label>Email Account Owner</label>
    <type>Email</type>
</CustomField>