force-app/main/default/objects/Case/fields/Escalated_To_AE_Cel__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To_AE_Cel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the Case has once been escalated to AE CEL.</description>
    <inlineHelpText>Checked if the Case has once been escalated to AE CEL.</inlineHelpText>
    <label>Escalated To AE Cel</label>
    <type>Checkbox</type>
</CustomField>