force-app/main/default/objects/Case/fields/Escalated_To_AE_Sho__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To_AE_Sho__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the Case has once been escalated to AE SHO.</description>
    <inlineHelpText>Checked if the Case has once been escalated to AE SHO.</inlineHelpText>
    <label>Escalated To AE Sho</label>
    <type>Checkbox</type>
</CustomField>