force-app/main/default/objects/Case/fields/Escalated_To_Q__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To_Q__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if anyone in Quality is the owner</description>
    <label>Escalated To Q</label>
    <type>Checkbox</type>
</CustomField>