force-app/main/default/objects/Case/fields/Escalation_Source__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Source__c</fullName>
    <formula>IF(OR($User.ProfileId=&quot;00e200000015FVB&quot;,$User.ProfileId=&quot;00e2p000001BMJg&quot;),&quot;TM&quot;,
  IF(ISPICKVAL($User.uB_Office__c,&quot;Rest of APAC&quot;),&quot;AE APAC&quot;,
    IF($User.Team_Leader__c,&quot;FAE Leader&quot;,&quot;FAE&quot;)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalation Source</label>
    <type>Text</type>
</CustomField>