force-app/main/default/objects/Case/fields/Escalation_Time__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Time__c</fullName>
    <formula>if( text(Status) = &quot;Closed&quot;, Case_Returned__c -  Date_Escalated_by_TM__c,
now() - Date_Escalated_by_TM__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Escalation Time in days. Time between Escalation Date TM and Case Returned</inlineHelpText>
    <label>Escalation Time</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>