force-app/main/default/objects/Case/fields/External_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Ticket_Number__c</fullName>
    <label>External Ticket Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>