force-app/main/default/objects/Case/fields/FAE__c.field-meta.xml
<CustomField>
    <fullName>FAE__c</fullName>
    <description>FAE of the Account</description>
    <formula>Account.FAE__r.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>FAE of the Account</inlineHelpText>
    <label>FAE</label>
    <type>Text</type>
</CustomField>