force-app/main/default/objects/Case/fields/FAE_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>FAE_Satisfaction__c</fullName>
    <inlineHelpText>Editable only for FAE and TM</inlineHelpText>
    <label>FAE Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Improvement Needed</fullName>
            </value>
            <value>
                <fullName>Improvement Possible</fullName>
            </value>
            <value>
                <fullName>Average - OK</fullName>
            </value>
            <value>
                <fullName>Above Normal Level</fullName>
            </value>
            <value>
                <fullName>Very Good Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>