force-app/main/default/objects/Case/fields/Failure_Rate__c.field-meta.xml
<CustomField>
    <fullName>Failure_Rate__c</fullName>
    <inlineHelpText>Number of failing parts / number of worked parts in a relevant time period</inlineHelpText>
    <label>Failure Rate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>