force-app/main/default/objects/Case/fields/For_Chip_Project__c.field-meta.xml
<CustomField>
    <fullName>For_Chip_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify Cases created for APAC chip project qualification</description>
    <label>For Chip Project</label>
    <type>Checkbox</type>
</CustomField>