force-app/main/default/objects/Case/fields/From_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Address__c</fullName>
    <formula>IF(Account_uB_Office__c = &apos;EMEA&apos;, &apos;support@u-blox.com&apos;,
IF(Account_uB_Office__c = &apos;Americas&apos;,&apos;support_us@u-blox.com&apos;,
IF(Account_uB_Office__c = &apos;Australia&apos;,&apos;support_anz@u-blox.com&apos;,
IF(Account_uB_Office__c = &apos;Rest of APAC&apos;,&apos;support_ap@u-blox.com&apos;,
IF(Account_uB_Office__c = &apos;China&apos;,&apos;support_cn@u-blox.com&apos;,
IF(Account_uB_Office__c = &apos;India&apos;,&apos;support_in@u-blox.com&apos;,
IF(Account_uB_Office__c = &apos;Japan&apos;,&apos;support_jp@u-blox.com&apos;,
IF(Account_uB_Office__c = &apos;Korea&apos;,&apos;support_kr@u-blox.com&apos;,
IF(Account_uB_Office__c = &apos;Taiwan&apos;,&apos;support_tw@u-blox.com&apos;,&apos;support_eu@u-blox.com&apos;
)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From Address</label>
    <type>Text</type>
</CustomField>