force-app/main/default/objects/Case/fields/Highest_Escallation_Level__c.field-meta.xml
<CustomField>
    <fullName>Highest_Escallation_Level__c</fullName>
    <formula>if ( not(isblank( Date_Escalated_by_TM__c)), 
     HQ_Department__c, if(isblank( Date_Escalated_by_FAE__c), &quot;FAE&quot;, &quot;TM&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Highest Escallation Level</label>
    <type>Text</type>
</CustomField>