force-app/main/default/objects/Case/fields/HQ_Department__c.field-meta.xml
<CustomField>
    <fullName>HQ_Department__c</fullName>
    <formula>CASE ( Type , 
&quot;Qualification / Reliability / Production&quot;,&quot;Quality&quot;, 
&quot;Environmental&quot;,&quot;Quality&quot;, 
&quot;Contract-Review&quot;,&quot;Quality&quot;, 
&quot;Questionaire / Self-Assessments&quot;,&quot;Quality&quot;, 
&quot;Failure Analysis (RMA)&quot;, &quot;Quality&quot;,
CASE ( Technology__c , 
&quot;GNSS&quot;,&quot;AE POS&quot;,
&quot;Cellular&quot;,&quot;AE CEL&quot;, 
&quot;Short Range&quot;,&quot;AE SHO&quot;, 
&quot;other&quot;
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>HQ department to which this case would be finally escallated.</inlineHelpText>
    <label>HQ Department</label>
    <type>Text</type>
</CustomField>