force-app/main/default/objects/Case/fields/is_Escalated_to_L2__c.field-meta.xml
<CustomField>
    <fullName>is_Escalated_to_L2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Escalated to L2</label>
    <type>Checkbox</type>
</CustomField>