force-app/main/default/objects/Case/fields/isDirect__c.field-meta.xml
<CustomField>
    <fullName>isDirect__c</fullName>
    <formula>AND(NOT(ISBLANK(Account.Distributor__c)), CONTAINS(UPPER(Account.Distributor__c),&apos;DIRECT&apos;))</formula>
    <label>Direct Case Account</label>
    <type>Checkbox</type>
</CustomField>