force-app/main/default/objects/Case/fields/Last_Closure_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Closure_Reminder_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cases LastModifiedDate between 150 days to 359 will not be closed yet but after 1 notification and 1 month later they will be if not modified by owner to take action.
This checkbox is used to remember the notification is sent or not.
Also used in Portal Community Case Schedule Reminder</description>
    <label>Last Closure Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>