force-app/main/default/objects/Case/fields/Last_Comment_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Comment_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Added for returning the Case to person who made the last Comment</description>
    <inlineHelpText>Added for returning the Case to person who made the last Comment</inlineHelpText>
    <label>Last Comment By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>