force-app/main/default/objects/Case/fields/Last_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Last_Owner_ID__c</fullName>
    <description>Used to return Case to last owner</description>
    <inlineHelpText>Used to return Case to last owner</inlineHelpText>
    <label>Last Owner ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>