force-app/main/default/objects/Case/fields/LastEmailCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>LastEmailCreatedDate__c</fullName>
    <label>Last Email Created Date</label>
    <type>DateTime</type>
</CustomField>