force-app/main/default/objects/Case/fields/LastEmailCreatedStatus__c.field-meta.xml
<CustomField>
    <fullName>LastEmailCreatedStatus__c</fullName>
    <label>Last Email Created Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Unread</fullName>
            </value>
            <value>
                <fullName>Replied</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Read (Update not new from email message)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>