force-app/main/default/objects/Case/fields/LastEmailStatusVisualIndicator__c.field-meta.xml
<CustomField>
    <fullName>LastEmailStatusVisualIndicator__c</fullName>
    <description>IF(
   ISPICKVAL( LastEmailStatusTimePeriod__c , &quot;Last email unread within 3 days&quot;), 
   IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Red&quot;, 16, 16), 
   IF(
       ISPICKVAL( LastEmailStatusTimePeriod__c, &quot;Last email unread within 2 days&quot;),  
       IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;Yellow&quot;, 16, 16), 
       IF(
           ISPICKVAL( LastEmailStatusTimePeriod__c, &quot;Last email unread within 1 day&quot;),  
           IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Green&quot;, 16, 16),
           IMAGE(&quot;/img/s.gif&quot;, &quot;NA&quot;)
       )
   )
)</description>
    <formula>IF(ISPICKVAL(LastEmailCreatedStatus__c, &quot;New&quot;),
 IF(TODAY() - DATEVALUE(LastEmailCreatedDate__c) &gt; 1, 
   IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Red&quot;, 16, 16),
    IF(TODAY() - DATEVALUE(LastEmailCreatedDate__c) = 1, 
      IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;Yellow&quot;, 16, 16),
      IF(TODAY() - DATEVALUE(LastEmailCreatedDate__c) =0, 
        IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Green&quot;, 16, 16),
        IMAGE(&quot;/img/s.gif&quot;, &quot;NA&quot;)
      )
    )
  ),
  IMAGE(&quot;/img/s.gif&quot;, &quot;NA&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Email Status Visual Indicator</label>
    <type>Text</type>
</CustomField>