force-app/main/default/objects/Case/fields/LastModifiedOnlyDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedOnlyDate__c</fullName>
    <formula>DATEVALUE(LastModifiedDate)</formula>
    <label>LastModifiedOnlyDate</label>
    <type>Date</type>
</CustomField>