force-app/main/default/objects/Case/fields/My_Case__c.field-meta.xml
<CustomField>
    <fullName>My_Case__c</fullName>
    <formula>OR(OwnerId = $User.Id, Case_Initiator__c = $User.Id, CreatedById = $User.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Case</label>
    <type>Checkbox</type>
</CustomField>