force-app/main/default/objects/Case/fields/New_Mail__c.field-meta.xml
<CustomField>
    <fullName>New_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when a new mail has come to the existing Case.</description>
    <inlineHelpText>Checked when a new mail has come to the existing Case.</inlineHelpText>
    <label>New Mail</label>
    <type>Checkbox</type>
</CustomField>