force-app/main/default/objects/Case/fields/Number_of_Parts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Parts__c</fullName>
    <inlineHelpText>Number of parts that the customer requests to ship back</inlineHelpText>
    <label>Number of Parts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>