force-app/main/default/objects/Case/fields/Opportunity_Focus__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Focus__c</fullName>
    <formula>TEXT(Opportunity__r.Focus__c)</formula>
    <label>Opportunity Focus</label>
    <type>Text</type>
</CustomField>