force-app/main/default/objects/Case/fields/Origin_of_Failure_at_Customer__c.field-meta.xml
<CustomField>
    <fullName>Origin_of_Failure_at_Customer__c</fullName>
    <label>Origin of Failure at Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>0km / 0hrs failure</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>