force-app/main/default/objects/Case/fields/PIF_Sent__c.field-meta.xml
<CustomField>
    <fullName>PIF_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Its a flag to keep record of PIF sent to a contact or not in the Portal case.</description>
    <inlineHelpText>Checked if Project Information Form is sent (by Macro)</inlineHelpText>
    <label>PIF Sent</label>
    <type>Checkbox</type>
</CustomField>